# openDHC

./: .gitignore  CMakeLists.txt  LICENSE  OpenDHC-Conversation-inline.md  README.md
.github/workflows/: appimage.yml  seed-opendhc.yml
packaging/: AppRun  build-appimage.sh  opendhc.desktop
src/: main.cpp
src/app/: BatchScanner.cpp  BatchScanner.hpp  ChdmanRunner.cpp  ChdmanRunner.hpp  Job.cpp  Job.hpp  JobModel.cpp  JobModel.hpp  Report.cpp  Report.hpp  Settings.cpp  Settings.hpp  SizeUtil.cpp  SizeUtil.hpp
ui/qml/: Main.qml
